--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -6,45 +6,62 @@
     android:layout_height="match_parent"
     tools:context="is.hi.recipeapp.hugbv2.SearchActivity">
 
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="70dp"
+        android:background="@android:color/transparent"
+        android:ems="11"
+        android:layout_marginTop="10dp"
+        android:inputType="textPersonName"
+        android:text="Select ingredients to search" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <CheckBox
+            android:id="@+id/checkBoxfish"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/checkBoxBeef"
+            android:layout_below="@+id/checkBoxBeef"
+            android:layout_marginTop="50dp"
+            android:text="fish" />
+
+        <CheckBox
+            android:id="@+id/checkBoxBeef"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/checkBoxChicken"
+            android:layout_below="@+id/checkBoxChicken"
+            android:layout_marginTop="0dp"
+            android:text="Beef" />
+
+        <CheckBox
+            android:id="@+id/checkBoxChicken"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="0dp"
+            android:text="chicken" />
+    </LinearLayout>
+
     <Button
         android:id="@+id/showRecipe"
         android:layout_width="130dp"
-        android:layout_height="67dp"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/checkBoxChicken"
-        android:layout_marginEnd="32dp"
-        android:text="LeitUppskrift"
+        android:layout_height="50dp"
+        android:layout_alignTop="@+id/checkBoxfish"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="170dp"
+        android:text="Search"
         tools:layout_editor_absoluteX="127dp"
         tools:layout_editor_absoluteY="202dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxChicken"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="38dp"
-        android:text="chicken" />
-
-    <CheckBox
-        android:id="@+id/checkBoxBeef"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/checkBoxChicken"
-        android:layout_below="@+id/checkBoxChicken"
-        android:layout_marginTop="23dp"
-        android:text="Beef" />
-
-    <CheckBox
-        android:id="@+id/checkBoxfish"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/checkBoxBeef"
-        android:layout_below="@+id/checkBoxBeef"
-        android:layout_marginTop="33dp"
-        android:text="fish" />
 
     <ListView
         android:id="@+id/listView"
@@ -52,6 +69,6 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/checkBoxfish"
-        android:layout_marginTop="53dp" />
+        android:layout_marginTop="250dp" />
 
 </RelativeLayout>
