--- a/app/src/main/res/layout/activity_myshoppinglist.xml
+++ b/app/src/main/res/layout/activity_myshoppinglist.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="is.hi.recipeapp.hugbv2.MyShoppingList">
+    tools:context="is.hi.recipeapp.hugbv2.ui.MyShoppingList">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
