--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -6,18 +6,53 @@
     android:layout_height="match_parent"
     tools:context="is.hi.recipeapp.hugbv2.SearchActivity">
 
-    <LinearLayout
+
+    <Button
+        android:id="@+id/showRecipe"
+        android:layout_width="130dp"
+        android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/checkboxes"
+        android:text="Search"
+        tools:layout_editor_absoluteX="127dp"
+        tools:layout_editor_absoluteY="202dp" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/showRecipe"/>
+
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/progressBar" />
+
+    <SearchView
+        android:id="@+id/search_bar"
+        android:layout_width="match_parent"
+        android:layout_height="32dp" >
+
+    </SearchView>
+
+    <LinearLayout
+        android:id="@+id/checkboxes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_below="@+id/search_bar">
 
         <CheckBox
             android:id="@+id/checkBoxPasta"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/checkBoxHam"
-            android:layout_below="@+id/checkBoxHam"
-            android:layout_marginTop="50dp"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/search_bar"
+            android:layout_marginEnd="14dp"
+            android:layout_marginTop="21dp"
             android:text="Pasta" />
 
         <CheckBox
@@ -37,23 +72,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginTop="0dp"
             android:text="Cheese" />
+
     </LinearLayout>
-
-    <Button
-        android:id="@+id/showRecipe"
-        android:layout_width="130dp"
-        android:layout_height="50dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="170dp"
-        android:text="Search"
-        tools:layout_editor_absoluteX="127dp"
-        tools:layout_editor_absoluteY="202dp" />
-
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="250dp"/>
 
 </RelativeLayout>
