--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ff4081</color>
+
+    <color name="startblue">#09c6df</color>
+    <color name="endblue">#0bcce6</color>+
+    <color name="yello">#ffb300</color>
+    <color name="pink">#ff4081</color>
 </resources>
