--- a/app/src/main/res/layout/activity_my_favorite_recipe.xml
+++ b/app/src/main/res/layout/activity_my_favorite_recipe.xml
@@ -1,20 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="is.hi.recipeapp.hugbv2.ui.MyFavoriteRecipe">
-
-    <EditText
-        android:layout_marginTop="200dp"
-        android:layout_marginLeft="80dp"
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="MyFavoriteRecipe"
-        tools:layout_editor_absoluteX="84dp"
-        tools:layout_editor_absoluteY="232dp" />
-</LinearLayout>
+    
+</RelativeLayout>
