--- a/app/src/main/res/layout/activity_my_profile2.xml
+++ b/app/src/main/res/layout/activity_my_profile2.xml
@@ -13,11 +13,11 @@
     <LinearLayout
         android:background="@drawable/gradientbackground"
         android:layout_width="match_parent"
-        android:layout_height="260dp"
+        android:layout_height="220dp"
         android:orientation="vertical">
 
         <ImageView
-            android:layout_marginTop="55dp"
+            android:layout_marginTop="40dp"
             android:layout_width="120dp"
             android:layout_height="111dp"
             android:layout_gravity="center_horizontal"
@@ -39,7 +39,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="320dp"
+            android:layout_marginTop="250dp"
             android:layout_marginLeft="20dp">
             <android.support.v7.widget.CardView
                 android:foreground="?android:attr/selectableItemBackground"
@@ -47,7 +47,7 @@
 
                 android:id="@+id/myfavoriterecipe"
                 android:layout_width="160dp"
-                android:layout_height="190dp"
+                android:layout_height="140dp"
                 android:layout_margin="10dp">
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -59,7 +59,7 @@
                         android:layout_height="64dp"
                         android:background="@drawable/cerclebackgroundpink"
                         android:layout_gravity="center"
-                        android:layout_marginTop="40dp"
+                        android:layout_marginTop="25dp"
                         android:src="@drawable/ic_star_border_black_24dp"
                         android:padding="10dp" />
                     <TextView
@@ -78,7 +78,7 @@
 
                 android:id="@+id/shoppinglist"
                 android:layout_width="160dp"
-                android:layout_height="190dp"
+                android:layout_height="140dp"
                 android:layout_margin="10dp">
 
                 <LinearLayout
@@ -91,7 +91,7 @@
                         android:layout_width="64dp"
                         android:layout_height="64dp"
                         android:layout_gravity="center"
-                        android:layout_marginTop="40dp"
+                        android:layout_marginTop="25dp"
                         android:background="@drawable/cerclebackgroundyello"
                         android:padding="10dp"
                         android:src="@drawable/ic_list_black_24dp" />
@@ -107,5 +107,46 @@
             </android.support.v7.widget.CardView>
 
         </LinearLayout>
+
+    <LinearLayout
+        android:clipToPadding="false"
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="420dp"
+        android:layout_marginLeft="20dp">
+        <android.support.v7.widget.CardView
+            android:foreground="?android:attr/selectableItemBackground"
+            android:clickable="true"
+
+            android:id="@+id/weekmenu"
+            android:layout_width="160dp"
+            android:layout_height="140dp"
+            android:layout_margin="10dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_gravity="center">
+                <ImageView
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:background="@drawable/cerclebackgroundgreen"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="25dp"
+                    android:src="@drawable/ic_restaurant_menu_black_24dp"
+                    android:padding="10dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"
+                    android:text="My Week menu"/>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
 
 </RelativeLayout>
