--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
     <color name="endblue">#0bcce6</color>+
     <color name="yello">#ffb300</color>
     <color name="pink">#ff4081</color>
+    <color name="green">#009688</color>
 </resources>
