--- a/app/src/main/res/layout/activity_week_single_item.xml
+++ b/app/src/main/res/layout/activity_week_single_item.xml
@@ -7,44 +7,22 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        
-        <ImageView
-            android:layout_width="80dp"
-            android:layout_height="105dp"
-            android:id="@+id/ivMain"
-            android:layout_marginLeft="10dp"
-            />
+
+        <is.hi.recipeapp.hugbv2.ui.LetterImageView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:id="@+id/ivLetter"
+            android:layout_margin="8dp">
+        </is.hi.recipeapp.hugbv2.ui.LetterImageView>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tvMain"
-            android:text="Timetable"
+            android:id="@+id/tvWeek"
+            android:text="Days"
             android:textStyle="bold"
-            android:layout_toRightOf="@+id/ivMain"
+            android:layout_toRightOf="@+id/ivLetter"
             android:textSize="24sp"/>
-        
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvDescription"
-            android:text="Description"
-            android:layout_below="@+id/tvMain"
-            android:layout_toRightOf="@id/ivMain"
-            android:textSize="16dp"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvClick"
-            android:textSize="12dp"
-            android:text="Click here"
-            android:layout_below="@+id/tvDescription"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="6dp"
-            android:layout_alignBottom="@+id/ivMain"
-            />
         
     </RelativeLayout>
 
