--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:paddingRight="24dp">
 
 
-        <ImageView android:src="@drawable/cashking"
+        <ImageView android:src="@drawable/aaeea"
             android:layout_width="wrap_content"
             android:layout_height="72dp"
             android:layout_marginBottom="24dp"
