--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -36,4 +36,14 @@
                 android:layout_gravity="center_horizontal" />
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:id="@+id/addToFav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="25dp"
+        android:layout_marginStart="30dp"
+        android:text="Add to Favorites" />
 </RelativeLayout>
