--- a/app/src/main/res/layout/activity_my_favorite_recipe.xml
+++ b/app/src/main/res/layout/activity_my_favorite_recipe.xml
@@ -5,5 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="is.hi.recipeapp.hugbv2.ui.MyFavoriteRecipe">
-    
+
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/showRecipe"/>
+
+    <ListView
+        android:id="@+id/listViewFav"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/progressBar" />
+
 </RelativeLayout>
