--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -25,15 +25,33 @@
                 android:layout_gravity="center_horizontal" />
 
             <TextView
+                android:id="@+id/recipeNameHeader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+
+            <TextView
                 android:id="@+id/ingredLines"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
 
             <ProgressBar
                 android:id="@+id/myProgressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal" />
+
+            <Button
+                android:id="@+id/addFavorite"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Add to favorite" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
