--- a/app/src/main/res/layout/activity_my_favorite_recipe.xml
+++ b/app/src/main/res/layout/activity_my_favorite_recipe.xml
@@ -11,8 +11,7 @@
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/showRecipe"/>
+        android:layout_centerHorizontal="true"/>
 
     <ListView
         android:id="@+id/listViewFav"
