--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,72 +7,104 @@
     tools:context="is.hi.recipeapp.hugbv2.SearchActivity">
 
 
-    <Button
-        android:id="@+id/showRecipe"
-        android:layout_width="130dp"
-        android:layout_height="50dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/checkboxes"
-        android:text="Search"
-        tools:layout_editor_absoluteX="127dp"
-        tools:layout_editor_absoluteY="202dp" />
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/showRecipe"/>
-
-    <ListView
-        android:id="@+id/listView"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/progressBar" />
+        android:layout_height="match_parent">
 
-    <SearchView
-        android:id="@+id/search_bar"
-        android:layout_width="match_parent"
-        android:layout_height="32dp" >
 
-    </SearchView>
-
-    <LinearLayout
-        android:id="@+id/checkboxes"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@+id/search_bar">
-
-        <CheckBox
-            android:id="@+id/checkBoxPasta"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/search_bar"
-            android:layout_marginEnd="14dp"
-            android:layout_marginTop="21dp"
-            android:text="Pasta" />
+            android:orientation="vertical" >
 
-        <CheckBox
-            android:id="@+id/checkBoxHam"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/checkBoxCheese"
-            android:layout_below="@+id/checkBoxCheese"
-            android:layout_marginTop="0dp"
-            android:text="Ham" />
+            <SearchView
+                android:id="@+id/search_bar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <CheckBox
-            android:id="@+id/checkBoxCheese"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="0dp"
-            android:text="Cheese" />
+            </SearchView>
 
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/checkboxes"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/search_bar"
+                android:orientation="vertical">
 
+                <CheckBox
+                    android:id="@+id/checkBoxPasta"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_below="@+id/search_bar"
+                    android:layout_marginEnd="14dp"
+                    android:layout_marginTop="21dp"
+                    android:text="Pasta" />
+
+                <CheckBox
+                    android:id="@+id/checkBoxHam"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignStart="@+id/checkBoxCheese"
+                    android:layout_below="@+id/checkBoxCheese"
+                    android:layout_marginTop="0dp"
+                    android:text="Ham" />
+
+                <CheckBox
+                    android:id="@+id/checkBoxCheese"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="0dp"
+                    android:text="Cheese" />
+
+            </LinearLayout>
+            <Button
+                android:id="@+id/showRecipe"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/checkboxes"
+                android:layout_gravity="center_horizontal"
+                android:text="Search"
+                tools:layout_editor_absoluteX="127dp"
+                tools:layout_editor_absoluteY="202dp" />
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/showRecipe"
+                android:layout_gravity="center_horizontal"/>
+
+            <ListView
+                android:id="@+id/listView"
+                android:layout_width="match_parent"
+                android:layout_height="826dp"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/progressBar" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/listView"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/previous"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Previous" />
+
+                <Button
+                    android:id="@+id/next"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="1"
+                    android:text="Next" />
+
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
