--- a/app/src/main/res/layout/activity_my_profile2.xml
+++ b/app/src/main/res/layout/activity_my_profile2.xml
@@ -23,11 +23,11 @@
             android:layout_gravity="center_horizontal"
             android:src="@drawable/profileimage" />
         <TextView
+            android:id="@+id/currentUser"
             android:layout_marginTop="10dp"
             android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="GunniCashKing"
             android:textColor="#fff"
             android:textStyle="bold"
             android:textSize="21sp"/>
@@ -144,6 +144,39 @@
                     android:textStyle="bold"
                     android:layout_marginTop="10dp"
                     android:text="My Week menu"/>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:foreground="?android:attr/selectableItemBackground"
+            android:clickable="true"
+
+            android:id="@+id/log_out"
+            android:layout_width="160dp"
+            android:layout_height="140dp"
+            android:layout_margin="10dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_gravity="center">
+
+                <ImageView
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="25dp"
+                    android:background="@drawable/cerclebackgroundblue"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_logout_24dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:text="Logout"
+                    android:textStyle="bold" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
