--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -70,6 +70,13 @@
                     android:text="TextView" />
             </LinearLayout>
 
+            <TextView
+                android:id="@+id/source_url"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:autoLink="web"
+                android:text="" />
+
             <ProgressBar
                 android:id="@+id/myProgressBar"
                 android:layout_width="wrap_content"
